--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet, .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
+    margin: -1.5px var(--swiper-pagination-bullet-horizontal-gap, 5px) !important;
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.swiper-pagination-bullet {
+    width:12px !important ;
+    height:12px !important ;
+   background: white !important;
+   opacity: 50% !important;
+   
 }
+.swiper-pagination-bullet-active {
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+    background: #DB4444 !important;
+    border:2px white solid !important;
+    opacity: 100% !important;
 }
